fix spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 @layer base {
+
+  :root{
+    --navigation-height: 4.8rem;
+  }
+
   html{
     @apply bg-background text-white font-sans;
     font-size: 62.5%;
